Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Workaround for iOS Open Vehicle App 1.8.6
    Workaround for legacy iOS App, hiding zero/negative temperatures to keep other TPMS data visible.
    This workaround only manipulates the TPMS temperature metric in message W.
- New vehicle: FIAT eDoblo via OBD-II port
    Initial support added for:
      VIN, SoC, SoH
      Door status
      Odometer
      HV, LV battery voltage
      temperatures
- TPMS framework: added sensor mapping commands for wheel rotation/swap scenarios
    New commands:
      tpms map status   -- show current TPMS sensor-to-wheel mapping with details
      tpms map get      -- machine-readable output like message Y without header MP-0 Y
      tpms map set      -- remap sensors using wheel position names (e.g., fl=rr fr=fl rl=fr rr=rl)
      tpms map reset    -- reset mapping to default (e.g. FL=0, FR=1, RL=2, RR=3)
    Config: [vehicle] tpms.xx (sensor index per wheel position, layout by GetTpmsLayout())
    Note: requires vehicle to implement UsesTpmsSensorMapping() returning true
- New vehicle: Maxus T90 EV (MT90) via OBD-II port
    Initial support added for:
      VIN, SOC, SOH & READY state
      AC plug / pilot detection
      Lock status
      Odometer
      Temperature metrics
- Renault Twizy: support added for standard metric "v.e.aux12v" (base system awake),
    OBD polling (DTC checks) enabled already with base system awake
    (= DTC available in STOP conditions)
- VW e-Up: enable framework climate preconditioning scheduler web UI
    (Note: climate control only available with T26 connection)
- Vehicle framework: Scheduled precondition control with duration support
    Centralized implementation for all vehicles with per-vehicle override capability.
    Supports multiple time slots per day with individual duration settings (5-30 minutes).
    Global enable/disable switch with config persistence.